--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,7 +14,8 @@
 
 .window {
   width: 1100px;
-  height: 80vh;
+  height: 100%;
+  max-height: 1000px;
   background: #a6a6a6;
 }
 
@@ -75,4 +76,28 @@
       transition: 0.3s ease all;
     }
   }
+}
+
+// main ------------------- //
+
+.main {
+  display: flex;
+}
+
+// sidebar ------------------ //
+
+.sidebar {
+  height: 80vh;
+  width: 400px;
+  background: #808080;
+  border-right: 3px solid rgb(221,221,221);
+}
+
+// tabs ------------------- //
+
+.tabs {
+  width: 100%;
+  height: 50px;
+  background: #808080;
+  border-bottom: 3px solid rgb(221,221,221);
 }
