--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@
   justify-content: center;
   min-height: 100vh;
   overflow: hidden;
+  position: relative;
 }
 
 .window {
@@ -100,4 +101,48 @@
   height: 50px;
   background: #808080;
   border-bottom: 3px solid rgb(221,221,221);
+}
+
+// popup ----------------- //
+
+.popup {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(86, 86, 86, 0.4);
+  &__wrapper {
+    background: #979797;
+    width: 300px;
+    padding: 10px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #4d4d4d;
+  }
+  &__title {
+    font-size: 18px;
+    color: white;
+    margin-bottom: 15px;
+  }
+  &__input {
+    background: #c3c3c3;
+    border: 2px solid #4d4d4d;
+    padding: 3px 5px;
+    width: 80%;
+    margin-bottom: 15px;
+  }
+  &__button {
+    width: 40%;
+    margin: 0 auto;
+    padding: 5px;
+    font-size: 16px;
+    background: #e8e7e7;
+    border: 1px solid #4d4d4d;
+  }
 }
