--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,6 +27,7 @@
   // .header__navigation
   &__navigation {
   }
+
   // .header__list
   &__list {
     min-height: 40px;
@@ -44,36 +45,39 @@
     cursor: pointer;
     transition: all 0.3s ease;
     position: relative;
-    background: rgb(221,221,221);
+    background: rgb(221, 221, 221);
+
     &:hover {
       transition: 0.3s ease;
       background: transparent;
-      box-shadow:none;
+      box-shadow: none;
     }
+
     &:before,
     &:after {
-      content:'';
-      position:absolute;
-      top:0;
-      right:0;
-      height:2px;
-      width:0;
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      height: 2px;
+      width: 0;
       background: #000000;
-      box-shadow:
-              -1px -1px 5px 0px #fff,
-              7px 7px 20px 0px #0003,
-              4px 4px 5px 0px #0002;
-      transition:400ms ease all;
+      box-shadow: -1px -1px 5px 0px #fff,
+      7px 7px 20px 0px #0003,
+      4px 4px 5px 0px #0002;
+      transition: 400ms ease all;
     }
+
     &:after {
-      right:inherit;
-      top:inherit;
-      left:0;
-      bottom:0;
+      right: inherit;
+      top: inherit;
+      left: 0;
+      bottom: 0;
     }
+
     &:hover:before,
     &:hover:after {
-      width:100%;
+      width: 100%;
       transition: 0.3s ease all;
     }
   }
@@ -89,9 +93,10 @@
 
 .sidebar {
   height: 80vh;
+  max-height: 955px;
   width: 400px;
   background: #808080;
-  border-right: 3px solid rgb(221,221,221);
+  border-right: 3px solid rgb(221, 221, 221);
 }
 
 // tabs ------------------- //
@@ -100,7 +105,7 @@
   width: 100%;
   height: 50px;
   background: #808080;
-  border-bottom: 3px solid rgb(221,221,221);
+  border-bottom: 3px solid rgb(221, 221, 221);
 }
 
 // popup ----------------- //
@@ -115,6 +120,7 @@
   top: 0;
   left: 0;
   background: rgba(86, 86, 86, 0.4);
+
   &__wrapper {
     background: #979797;
     width: 300px;
@@ -125,11 +131,13 @@
     align-items: center;
     border: 2px solid #4d4d4d;
   }
+
   &__title {
     font-size: 18px;
     color: white;
     margin-bottom: 15px;
   }
+
   &__input {
     background: #c3c3c3;
     border: 2px solid #4d4d4d;
@@ -137,6 +145,7 @@
     width: 80%;
     margin-bottom: 15px;
   }
+
   &__button {
     width: 40%;
     margin: 0 auto;
@@ -144,5 +153,42 @@
     font-size: 16px;
     background: #e8e7e7;
     border: 1px solid #4d4d4d;
+  }
+}
+
+// folder ---------- //
+.folder {
+  font-size: 16px;
+  color: white;
+  margin: 5px;
+  padding: 5px 17px;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+
+  &:before {
+    content: '';
+    padding-right: 16px;
+    margin-right: 5px;
+    background: url("../assets/images/icon-folder.png") center no-repeat;
+  }
+
+  &__arrow {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translate(0, -50%);
+    margin-left: 5px;
+    width: 0;
+    height: 0;
+    border-top: 3.5px solid transparent;
+    border-left: 7px solid #000000;
+    border-bottom: 3.5px solid transparent;
+    cursor: pointer;
+  }
+
+  &.active {
+    background: #6a6a6a;
+    border-radius: 10px;
   }
 }
