--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,12 +11,14 @@
   min-height: 100vh;
   overflow: hidden;
   position: relative;
+  padding-top: 20px;
+  padding-bottom: 60px;
 }
 
 .window {
   width: 1100px;
-  height: 100%;
-  max-height: 1000px;
+  height: 650px;
+  max-height: 650px;
   background: #a6a6a6;
 }
 
@@ -46,7 +48,9 @@
     transition: all 0.3s ease;
     position: relative;
     background: rgb(221, 221, 221);
-
+    a {
+      display: none;
+    }
     &:hover {
       transition: 0.3s ease;
       background: transparent;
@@ -87,13 +91,23 @@
 
 .main {
   display: flex;
+  height: 100%;
+  &__area {
+    background: #a6a6a6;
+    width: 100%;
+  }
+  &__content {
+    padding: 10px;
+    overflow: auto;
+    max-height: 620px;
+    max-width: 806px;
+  }
 }
 
 // sidebar ------------------ //
 
 .sidebar {
-  height: 80vh;
-  max-height: 955px;
+  height: 100%;
   width: 400px;
   background: #808080;
   border-right: 3px solid rgb(221, 221, 221);
@@ -103,9 +117,29 @@
 
 .tabs {
   width: 100%;
-  height: 50px;
+  height: 30px;
   background: #808080;
   border-bottom: 3px solid rgb(221, 221, 221);
+  &__tab {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 100px;
+    height: 30px;
+    border-bottom: 3px solid rgb(221, 221, 221);
+    border-right: 3px solid rgb(221, 221, 221);
+    background: transparent;
+    cursor: pointer;
+    transition: 0.3s;
+    &.active {
+      border-bottom: 3px solid rgb(250, 160, 160);
+      background: #a0a0a0;
+    }
+    &:hover {
+      background: #a0a0a0;
+    }
+  }
 }
 
 // popup ----------------- //
@@ -160,11 +194,10 @@
 .folder {
   font-size: 16px;
   color: white;
-  margin: 5px;
+  margin: 5px 5px -5px 5px;
   padding: 5px 17px;
   cursor: pointer;
   position: relative;
-  max-height: 25px;
 
   &:before {
     content: '';
@@ -193,7 +226,31 @@
   }
 
   &.active {
-      background: #6a6a6a;
+      background: #a0a0a0;
       border-radius: 10px;
+  }
+}
+
+#input_file {
+  display: none;
+}
+
+.file {
+  font-size: 16px;
+  color: white;
+  margin: 5px 5px -5px 5px;
+  padding: 5px 17px;
+  cursor: pointer;
+  position: relative;
+
+  &:before {
+    content: '';
+    padding-right: 16px;
+    margin-right: 5px;
+    background: url("../assets/images/file.png") center no-repeat;
+  }
+  &.active {
+    background: #a0a0a0;
+    border-radius: 10px;
   }
 }
