--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,9 @@
 @import url(https://fonts.googleapis.com/css?family=Neucha:regular);
 
 // global ---------------- //
+.body {
+
+}
 
 .wrapper {
   font-family: 'Neucha', sans-serif;
