--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,33 +23,35 @@ html {
 }
 
 .window {
-  width: 1100px;
-  height: 650px;
-  max-height: 650px;
+  width: 1024px;
   background: #a6a6a6;
+  border: 3px solid orange;
 }
 
 // ----------------------- //
 // header ---------------- //
 .header {
   background: #cccbcb;
+  height: 40px;
   // .header__navigation
   &__navigation {
   }
 
   // .header__list
   &__list {
-    min-height: 40px;
     display: flex;
     justify-content: space-between;
+    li{
+      flex: 0 1 16.666%;
+    }
   }
 
   // .header__button
   &__button {
     font-size: 18px;
-    width: 183.2px;
+    width: 100%;
     color: #000;
-    padding: 10px 25px;
+    padding: 9px 25px;
     font-weight: 500;
     cursor: pointer;
     transition: all 0.3s ease;
@@ -98,7 +100,7 @@ html {
 
 .main {
   display: flex;
-  height: 100%;
+  height: 610px;
   &__area {
     background: #a6a6a6;
     width: 100%;
@@ -106,8 +108,8 @@ html {
   &__content {
     padding: 10px;
     overflow: auto;
-    max-height: 620px;
-    max-width: 806px;
+    max-height: 580px;
+    width: 738px;
   }
 }
 
@@ -115,7 +117,9 @@ html {
 
 .sidebar {
   height: 100%;
-  width: 400px;
+  min-width: 280px;
+  max-width: 280px;
+  overflow: auto;
   background: #808080;
   border-right: 3px solid rgb(221, 221, 221);
 }
@@ -128,12 +132,14 @@ html {
   background: #808080;
   border-bottom: 3px solid rgb(221, 221, 221);
   &__tab {
+    position: relative;
+    z-index: 0;
     display: inline-flex;
     align-items: center;
     justify-content: center;
     text-align: center;
-    width: 100px;
     height: 30px;
+    padding: 0 20px;
     border-bottom: 3px solid rgb(221, 221, 221);
     border-right: 3px solid rgb(221, 221, 221);
     background: transparent;
@@ -145,6 +151,31 @@ html {
     }
     &:hover {
       background: #a0a0a0;
+    }
+  }
+  &__cross {
+    position: absolute;
+    cursor: pointer;
+    top: 13px;
+    right: 15px;
+    margin-left: 5px;
+    &:after {
+      content: '';
+      position: absolute;
+      display: inline-block;
+      transform: rotate(-45deg);
+      width: 12px;
+      height: 2px;
+      background: black;
+    }
+    &:before {
+      content: '';
+      position: absolute;
+      display: inline-block;
+      transform: rotate(45deg);
+      width: 12px;
+      height: 2px;
+      background: black;
     }
   }
 }
