--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,33 @@ html {
   user-select: none;
 }
 
+%fileAndFolder {
+  font-size: 16px;
+  color: white;
+  margin-bottom: -5px;
+  margin-top: 5px;
+  padding: 5px 17px;
+  cursor: pointer;
+  position: relative;
+  z-index: 1;
+
+  &.active {
+    &:after {
+      content: '';
+      position: absolute;
+      z-index: -1;
+      top: 0;
+      left: 0;
+      background: rgba(171, 171, 171, 0.42);
+      width: 100%;
+      height: 25px;
+      border: 1px solid orange;
+      border-radius: 10px;
+    }
+  }
+
+}
+
 .wrapper {
   font-family: 'Neucha', sans-serif;
   display: flex;
@@ -41,7 +68,8 @@ html {
   &__list {
     display: flex;
     justify-content: space-between;
-    li{
+
+    li {
       flex: 0 1 16.666%;
     }
   }
@@ -57,9 +85,11 @@ html {
     transition: all 0.3s ease;
     position: relative;
     background: rgb(221, 221, 221);
+
     a {
       display: none;
     }
+
     &:hover {
       transition: 0.3s ease;
       background: transparent;
@@ -101,16 +131,22 @@ html {
 .main {
   display: flex;
   height: 610px;
+
   &__area {
     background: #a6a6a6;
     width: 100%;
   }
+
   &__content {
-    padding: 10px;
-    overflow: auto;
     max-height: 580px;
     width: 738px;
   }
+}
+
+code.hljs {
+  margin-top: -12.5px;
+  max-height: 580px;
+  background: #a6a6a6;
 }
 
 // sidebar ------------------ //
@@ -122,6 +158,7 @@ html {
   overflow: auto;
   background: #808080;
   border-right: 3px solid rgb(221, 221, 221);
+  padding: 5px;
 }
 
 // tabs ------------------- //
@@ -131,6 +168,7 @@ html {
   height: 30px;
   background: #808080;
   border-bottom: 3px solid rgb(221, 221, 221);
+
   &__tab {
     position: relative;
     z-index: 0;
@@ -145,20 +183,24 @@ html {
     background: transparent;
     cursor: pointer;
     transition: 0.3s;
+
     &.active {
-      border-bottom: 3px solid rgb(250, 160, 160);
+      border-bottom: 3px solid orange;
       background: #a0a0a0;
     }
+
     &:hover {
       background: #a0a0a0;
     }
   }
+
   &__cross {
     position: absolute;
     cursor: pointer;
     top: 13px;
     right: 15px;
     margin-left: 5px;
+
     &:after {
       content: '';
       position: absolute;
@@ -168,6 +210,7 @@ html {
       height: 2px;
       background: black;
     }
+
     &:before {
       content: '';
       position: absolute;
@@ -230,12 +273,7 @@ html {
 
 // folder ---------- //
 .folder {
-  font-size: 16px;
-  color: white;
-  margin: 5px 5px -5px 5px;
-  padding: 5px 17px;
-  cursor: pointer;
-  position: relative;
+  @extend %fileAndFolder;
 
   &:before {
     content: '';
@@ -256,16 +294,12 @@ html {
     border-left: 7px solid #000000;
     border-bottom: 3.5px solid transparent;
     cursor: pointer;
+
     &.active_arrow {
       border-top: 0;
       border-left: 7px solid transparent;
       border-bottom: 7px solid #000000;
     }
-  }
-
-  &.active {
-      background: #a0a0a0;
-      border-radius: 10px;
   }
 }
 
@@ -274,12 +308,7 @@ html {
 }
 
 .file {
-  font-size: 16px;
-  color: white;
-  margin: 5px 5px -5px 5px;
-  padding: 5px 17px;
-  cursor: pointer;
-  position: relative;
+  @extend %fileAndFolder;
 
   &:before {
     content: '';
@@ -287,8 +316,7 @@ html {
     margin-right: 5px;
     background: url("../assets/images/file.png") center no-repeat;
   }
-  &.active {
-    background: #a0a0a0;
-    border-radius: 10px;
-  }
+
 }
+
+
