--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,9 +15,10 @@ html {
   color: white;
   margin-bottom: -5px;
   margin-top: 5px;
-  padding: 5px 0 5px 17px;
+  padding: 5px 0 5px 0;
   cursor: pointer;
   position: relative;
+  left: 0;
   z-index: 1;
   width: 100%;
 
@@ -29,11 +30,17 @@ html {
       top: 0;
       left: 0;
       background: transparent;
-      width: 100%;
+      min-width: 100%;
       height: 25px;
       border: 1px solid orange;
       border-radius: 10px;
     }
+  }
+
+  span {
+    position: relative;
+    z-index: -10;
+    padding-left: 17px;
   }
 }
 
@@ -138,14 +145,14 @@ html {
   }
 
   &__content {
-    max-height: 580px;
+    max-height: 560px;
     width: 738px;
   }
 }
 
 code.hljs {
   margin-top: -12.5px;
-  max-height: 580px;
+  max-height: 560px;
   background: #a6a6a6;
 }
 
@@ -153,30 +160,32 @@ code.hljs {
 
 .sidebar {
   height: 100%;
-  min-width: 280px;
-  max-width: 280px;
-  overflow: hidden;
+  width: 100%;
   background: #808080;
   border-right: 3px solid rgb(221, 221, 221);
   padding: 5px;
+  overflow-y: auto;
 }
 
 // tabs ------------------- //
 
 .tabs {
   width: 100%;
-  height: 30px;
+  max-width: 738px;
+  height: 50px;
   background: #808080;
   border-bottom: 3px solid rgb(221, 221, 221);
+  display: flex;
+  flex-wrap: nowrap;
+  overflow: hidden;
 
   &__tab {
     position: relative;
-    z-index: 0;
     display: inline-flex;
     align-items: center;
     justify-content: center;
     text-align: center;
-    height: 30px;
+    height: 50px;
     padding: 0 20px;
     border-bottom: 3px solid rgb(221, 221, 221);
     border-right: 3px solid rgb(221, 221, 221);
@@ -276,15 +285,18 @@ code.hljs {
 .folder {
   @extend %fileAndFolder;
 
-  &:before {
-    content: '';
-    padding-right: 16px;
-    margin-right: 5px;
-    background: url("../assets/images/icon-folder.png") center no-repeat;
+  &__name {
+    &:before {
+      content: '';
+      padding-right: 16px;
+      margin-right: 5px;
+      background: url("../assets/images/icon-folder.png") center no-repeat;
+    }
   }
 
   &__arrow {
     position: absolute;
+    z-index: 2;
     top: 13px;
     left: 0;
     transform: translate(0, -50%);
@@ -311,43 +323,60 @@ code.hljs {
 .file {
   @extend %fileAndFolder;
 
-  &:before {
-    content: '';
-    padding-right: 16px;
-    margin-right: 5px;
-    background: url("../assets/images/file.png") center no-repeat;
+  &__name {
+    &:before {
+      content: '';
+      padding-right: 16px;
+      margin-right: 5px;
+      background: url("../assets/images/file.png") center no-repeat;
+    }
   }
-
 }
+
 // description ---------- //
 .description {
   position: absolute;
-  z-index: 1;
+  z-index: 100;
   background: white;
   border: 2px solid #000000;
   width: 220px;
   min-height: 50px;
   animation: desc 1s ease;
-  padding: 10px;
+  padding: 10px 10px 5px 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow: auto;
+
   &__title {
-    text-align: center;
+    align-self: flex-start;
     margin-bottom: 5px;
-    font-size: 18px;
+    font-size: 14px;
     font-weight: 600;
   }
+
   &__content {
+    font-size: 18px;
+    font-weight: 600;
     text-align: center;
     margin-bottom: 5px;
   }
+
   &__edit {
-    background: transparent;
-    border: 2px solid #808080;
-    padding: 3px 10px;
+    align-self: flex-start;
+    padding: 2px 5px;
+    background-image: url("../assets/images/edit.png");
+    background-color: transparent;
+    width: 16px;
+    height: 16px;
+
+    &.edit {
+      background-image: url("../assets/images/save.png");
+      background-color: transparent;
+    }
   }
+
   &__area {
     resize: none;
     width: 100%;
@@ -355,6 +384,8 @@ code.hljs {
     border: 2px solid #4d4d4d;
     padding: 5px;
     margin-bottom: 5px;
+    font-size: 18px;
+    font-weight: 600;
   }
 }
 
