--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,17 +1,12 @@
 .header {
   background: #cccbcb;
   height: 40px;
-  // .header__navigation
-  &__navigation {
-  }
-
   // .header__list
   &__list {
     display: flex;
-    justify-content: space-between;
 
     li {
-      flex: 0 0 16.666%;
+      flex: 0 1 16.666%;
     }
   }
 
@@ -19,7 +14,6 @@
   &__button {
     font-size: 16px;
     width: 100%;
-    min-width: 160px;
     color: #000;
     padding: 9px 25px;
     font-weight: 500;
@@ -27,43 +21,37 @@
     transition: all 0.3s ease;
     position: relative;
     background: rgb(221, 221, 221);
+    white-space: nowrap;
+    border: none;
+    z-index: 1;
 
     a {
       display: none;
     }
 
-    &:hover {
-      transition: 0.3s ease;
-      background: transparent;
-      box-shadow: none;
-    }
-
-    &:before,
     &:after {
-      content: '';
       position: absolute;
+      content: "";
+      width: 0;
+      height: 100%;
       top: 0;
       right: 0;
-      height: 2px;
-      width: 0;
-      background: #000000;
-      box-shadow: -1px -1px 5px 0px #fff,
-      7px 7px 20px 0px #0003,
-      4px 4px 5px 0px #0002;
-      transition: 400ms ease all;
+      z-index: -1;
+      background-color: #a0a0a0;
+      box-shadow:inset 2px 2px 2px 0 rgba(255,255,255,.5),
+      7px 7px 20px 0 rgba(0,0,0,.1),
+      4px 4px 5px 0 rgba(0,0,0,.1);
+      transition: all 0.3s ease;
     }
 
-    &:after {
-      right: inherit;
-      top: inherit;
-      left: 0;
-      bottom: 0;
-    }
-
-    &:hover:before,
     &:hover:after {
+      left: 0;
       width: 100%;
-      transition: 0.3s ease all;
+    }
+    &:active {
+      box-shadow:inset 2px 2px 2px 5px rgba(255,255,255,.5),
+      7px 7px 20px 0 rgba(0,0,0,.1),
+      4px 4px 5px 0 rgba(0,0,0,.1);
     }
   }
 }
