--- a/src/styles/template.scss
+++ b/src/styles/template.scss
@@ -1,12 +1,11 @@
 %fileAndFolder {
-  font-size: 16px;
+  font-size: 14px;
   color: white;
   margin-bottom: -5px;
   margin-top: 5px;
-  padding: 5px 0 5px 0;
+  padding: 5px 0;
   cursor: pointer;
   position: relative;
-  left: 0;
   z-index: 1;
   width: 100%;
   white-space: nowrap;
@@ -15,7 +14,7 @@
     &:after {
       content: '';
       position: absolute;
-      z-index: -1;
+      z-index: 0;
       top: 0;
       left: 0;
       min-width: 100%;
@@ -27,7 +26,7 @@
 
   span {
     position: relative;
-    z-index: -10;
+    z-index: -1;
     padding-left: 17px;
   }
 }
